--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,10 @@
 	<title>React basics</title>
 </head>
 <body>
+	<div id="app">
+		
+	</div>
+
 	<script src="/app/bundle.js"></script>
 </body>
 </html>
